[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/Piece.gd" type="Script" id=1]
[ext_resource path="res://assets/black_pawn_001.png" type="Texture" id=2]
[ext_resource path="res://assets/white_pawn_001.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64, 64 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "white_pawn_001",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "black_pawn_001",
"speed": 5.0
} ]

[node name="Piece" type="TouchScreenButton"]
shape = SubResource( 1 )
shape_centered = false
script = ExtResource( 1 )

[node name="PieceSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "white_pawn_001"

[connection signal="pressed" from="." to="." method="_on_Piece_pressed"]
[connection signal="released" from="." to="." method="_on_Piece_released"]
